graphchan_frontend/check_output_5.txt
warning: `/Users/max/.cargo/config` is deprecated in favor of `config.toml`
note: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Checking graphchan_frontend v0.1.0 (/Users/max/Code/OrbWeaver/graphchan_frontend)
error[E0599]: no method named `render_file_attachment` found for mutable reference `&mut GraphchanApp` in the current scope
   --> graphchan_frontend/src/app/ui/thread.rs:213:50
    |
213 | ...                   self.render_file_attachment(ui, file, &api_base);
    |                            ^^^^^^^^^^^^^^^^^^^^^^ method not found in `&mut GraphchanApp`

error[E0063]: missing field `pinned` in initializer of `ThreadSummary`
   --> graphchan_frontend/src/app/mod.rs:330:34
    |
330 |                         summary: ThreadSummary {
    |                                  ^^^^^^^^^^^^^ missing `pinned`

error[E0599]: no method named `render_thread_view` found for mutable reference `&mut GraphchanApp` in the current scope
   --> graphchan_frontend/src/app/mod.rs:366:38
    |
366 |             let thread_action = self.render_thread_view(ctx, &mut temp_state);
    |                                      ^^^^^^^^^^^^^^^^^^
    |
help: there is a method `render_thread` with a similar name
    |
366 -             let thread_action = self.render_thread_view(ctx, &mut temp_state);
366 +             let thread_action = self.render_thread(ctx, &mut temp_state);
    |

error[E0599]: no method named `render_image_viewers` found for mutable reference `&mut GraphchanApp` in the current scope
   --> graphchan_frontend/src/app/mod.rs:388:14
    |
388 |         self.render_image_viewers(ctx);
    |              ^^^^^^^^^^^^^^^^^^^^ method not found in `&mut GraphchanApp`

error[E0499]: cannot borrow `*app` as mutable more than once at a time
  --> graphchan_frontend/src/app/ui/drawer.rs:54:22
   |
17 |             let state = &mut app.identity_state;
   |                         ----------------------- first mutable borrow occurs here
...
54 |                      app.spawn_load_identity();
   |                      ^^^ second mutable borrow occurs here
...
64 |             if let Some(path) = &state.avatar_path {
   |                                 ------------------ first borrow later used here

warning: unused variable: `scale`
  --> graphchan_frontend/src/app/ui/graph.rs:77:82
   |
77 | fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], scale: f32, thread_id: &str, repulsion_force: f32) {
   |                                                                                  ^^^^^
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
help: if this is intentional, prefix it with an underscore
   |
77 | fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], _scale: f32, thread_id: &str, repulsion_force: f32) {
   |                                                                                  +
help: you might have meant to pattern match on the similarly named constant `TOP_MARGIN`
   |
77 - fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], scale: f32, thread_id: &str, repulsion_force: f32) {
77 + fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], app::ui::chronological::TOP_MARGIN: f32, thread_id: &str, repulsion_force: f32) {
   |

warning: unused variable: `state`
   --> graphchan_frontend/src/app/ui/graph.rs:520:42
    |
520 | fn render_node_header(ui: &mut egui::Ui, state: &mut ThreadState, post: &PostView, zoom: f32) {
    |                                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

Some errors have detailed explanations: E0063, E0499, E0599.
For more information about an error, try `rustc --explain E0063`.
warning: `graphchan_frontend` (lib) generated 2 warnings
error: could not compile `graphchan_frontend` (lib) due to 5 previous errors; 2 warnings emitted
